# python-module-template

./: LICENSE  mail.py  pyproject.toml
