[project]
name = ""
version = ""
authors = [
  { name="", email="" },
]
description = ""
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zandora-space/"
"Bug Tracker" = "https://github.com/zandora-space/"
